sync pivot values using array of objects
