# app/Http/Controllers/Admin/V1/ActivitiesController.php
@@ -14,6 +14,7 @@ use App\Interfaces\ActivityInterface;
 use App\Http\Controllers\Admin\V1\Docs;
 use App\Http\Requests\admin\V1\ActivityRequest;
 
+
 class ActivitiesController extends Controller
 {
     use ApiResponse, Docs;
@@ -21,6 +22,8 @@ class ActivitiesController extends Controller
     public function __construct(ActivityInterface $activityRepository)
     {
         $this->activityRepository = $activityRepository;
+        $this->middleware('auth.apikey');
+        $this->middleware('auth:api');
     }
 
     // --- store in activity - weekday
@@ -114,32 +117,22 @@ class ActivitiesController extends Controller
      *             type="string"
      *         )
      *     ),
-     *     @OA\RequestBody(
-     *         required=true,
-     *         @OA\MediaType(
-     *             mediaType="application/json",
-     *             @OA\Schema(
-     *                 @OA\Property(
-     *                     property="weekday",
-     *                     type = "array",
-     *                     @OA\Items(
-     *                         type="string",                       
-     *                     )
+     *    @OA\RequestBody(
+     *           required=true,
+     *           description="Body request needed to update activity weekdays",
+     *            @OA\MediaType(
+     *            mediaType="application/json",
+     *            @OA\Schema(
+     *               type="object",
+     *                  @OA\Property(property="activity_hours",type="array", @OA\Items(
+     *                  @OA\Property(property="weekday",type="string"),
+     *                  @OA\Property(property="start_time",type="string"),
+     *                  @OA\Property(property="end_time",type="string"),
+     *                          ),
+     *                     ),
      *                 ),
-     *                 @OA\Property(
-     *                     property="start_time",
-     *                     type="string",
-     *                     example="09:00"
-     *                 ),
-     *                 @OA\Property(
-     *                     property="end_time",
-     *                     type="string",
-     *                     example="09:00"
-     *                     
-     *                 )
-     *             )
-     *         )
-     *     ),
+     *            ),
+     *      ),
      *      @OA\Response(
      *          response="200",
      *          description="Successful Operation",
@@ -175,19 +168,40 @@ class ActivitiesController extends Controller
 
     public function update(ActivityRequest $request)
     {
-        try { 
+        try {
             $activity = $this->activityRepository->getActivityBySlug($request);
-            $a = array(); 
-            foreach ($request->weekday as $value) {
-                $weekday_id = WeekDay::where('slug', $value)->value('id'); 
-                $res = $this->activityRepository->getActivityWeek($request);
-                if (!empty($res))
-                    return $this->errorResponse(__("messages.query_denied"), Response::HTTP_BAD_REQUEST);
+            $data = json_decode($request->getContent(), true);
+            $syncData = array();
+            foreach ($data['activity_hours'] as $item) {
+                $weekday = $item['weekday'];
+                $start_time = $item['start_time'];
+                $end_time = $item['end_time'];
+                $weekday_id = WeekDay::where('slug', $weekday)->value('id');
+                $syncData[$weekday_id] = [
 
-                array_push($a, $weekday_id);
+                    'start_time' => $start_time,
+                    'end_time' => $end_time
+                ];
+
+
             }
-            $activity->weekdays()->syncWithPivotValues($a, ["start_time" => $request->start_time, "end_time" => $request->end_time]);
+
+            $activity->weekdays()->sync($syncData);
             return $this->successResponse(__("messages.records_attached"));
+            
+            // --- hayde bt nazil the same start and end time for every combination activity-weekday provided
+            // $activity = $this->activityRepository->getActivityBySlug($request);
+            // $a = array(); 
+            // foreach ($request->weekday as $value) {
+            //     $weekday_id = WeekDay::where('slug', $value)->value('id'); 
+            //     // $res = $this->activityRepository->getActivityWeek($request);
+            //     // if (!empty($res))
+            //     //     return $this->errorResponse(__("messages.query_denied"), Response::HTTP_BAD_REQUEST);
+
+            //     array_push($a, $weekday_id);
+            // }
+            // $activity->weekdays()->syncWithPivotValues($a, ["start_time" => $request->start_time, "end_time" => $request->end_time]);
+            // return $this->successResponse(__("messages.records_attached"));
         } catch (Exception $e) {
             return $this->errorResponse($e->getMessage(), Response::HTTP_INTERNAL_SERVER_ERROR);
         }
